--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,4 +34,5 @@ dependencies {
     compile 'com.google.android.gms:play-services-ads:11.6.0'
     compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
     compile "com.facebook.fresco:fresco:1.2.0"
+    compile 'io.github.kobakei:ratethisapp:1.2.0'
 }
