--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,8 +31,10 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLib"
     compile "com.android.support:design:$supportLib"
     compile "com.android.support:support-v4:$supportLib"
-    compile 'com.google.android.gms:play-services-ads:11.6.0'
+    compile 'com.google.android.gms:play-services-ads:11.8.0'
     compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
     compile "com.facebook.fresco:fresco:1.2.0"
     compile 'io.github.kobakei:ratethisapp:1.2.0'
+    compile 'com.google.firebase:firebase-core:11.8.0'
 }
+apply plugin: 'com.google.gms.google-services'
