Tutorial screen added

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,9 @@
         <activity
             android:hardwareAccelerated="true"
             android:name=".AdActivity"></activity>
+        <activity
+            android:hardwareAccelerated="true"
+            android:name=".TutorialActivity"></activity>
     </application>
 
 </manifest>
