--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,10 +31,14 @@
             android:name=".ImagesActivity" />
         <activity
             android:hardwareAccelerated="true"
-            android:name=".AdActivity"></activity>
+            android:name=".AdActivity">
+
+        </activity>
         <activity
             android:hardwareAccelerated="true"
-            android:name=".TutorialActivity"></activity>
+            android:name=".TutorialActivity">
+
+        </activity>
     </application>
 
 </manifest>
