--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.appinspire.imagedesigns">
+    package="com.amanapps.imagedesigns">
 
     <uses-permission android:name="android.permission.INTERNET" />
 
@@ -14,7 +14,7 @@
         android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashActivity"
+            android:name="com.amanapps.imagedesigns.SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -25,20 +25,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MainActivity"
+            android:name="com.amanapps.imagedesigns.MainActivity"
             android:screenOrientation="portrait" />
         <activity
-            android:name=".ImagesActivity" />
-        <activity
-            android:hardwareAccelerated="true"
-            android:name=".AdActivity">
-
-        </activity>
-        <activity
-            android:hardwareAccelerated="true"
-            android:name=".TutorialActivity">
-
-        </activity>
+            android:name="com.amanapps.imagedesigns.ImagesActivity" />
     </application>
 
 </manifest>
