--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.optimisedapps.rings"
+        applicationId "com.optimisedapps.ringdesigns"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
@@ -31,11 +31,11 @@ dependencies {
     compile "com.android.support:cardview-v7:$supportLib"
     compile "com.android.support:design:$supportLib"
     compile "com.android.support:support-v4:$supportLib"
-    compile 'com.google.android.gms:play-services-ads:11.8.0'
+    compile 'com.google.android.gms:play-services-ads:15.0.1'
     compile 'com.github.stfalcon:frescoimageviewer:0.5.0'
     compile "com.facebook.fresco:fresco:1.2.0"
     compile 'io.github.kobakei:ratethisapp:1.2.0'
-    compile 'com.google.firebase:firebase-core:11.8.0'
-    compile 'com.google.firebase:firebase-database:11.8.0'
+    compile 'com.google.firebase:firebase-core:16.0.1'
+    compile 'com.google.firebase:firebase-database:16.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
