--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,15 +6,15 @@
 
     <application
         android:allowBackup="true"
+        android:hardwareAccelerated="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@drawable/ic_launcher"
         android:supportsRtl="true"
-        android:hardwareAccelerated="true"
-        android:largeHeap="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name="com.amanapps.imagedesigns.SplashActivity"
+            android:name=".SplashActivity"
             android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -25,10 +25,10 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.amanapps.imagedesigns.MainActivity"
+            android:name=".MainActivity"
             android:screenOrientation="portrait" />
-        <activity
-            android:name="com.amanapps.imagedesigns.ImagesActivity" />
+        <activity android:name=".ImagesActivity" />
+        <activity android:name=".CategoryActivity"></activity>
     </application>
 
 </manifest>
