--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 26
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "com.optimisedapps.earringdesigns"
+        applicationId "com.optimisedapps.necklacedesigns"
         minSdkVersion 19
         targetSdkVersion 26
         versionCode 1
